--- a/RAM0230_Project_group_1/Project.domain/KolledzDB.tt
+++ b/RAM0230_Project_group_1/Project.domain/KolledzDB.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"KolledzDBModel.edmx";
+const string inputFile = @"KolledzDB.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
