--- a/RAM0230_Project_group_1/Project.UI.WebMVCApp/Views/Visits/Index.cshtml
+++ b/RAM0230_Project_group_1/Project.UI.WebMVCApp/Views/Visits/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.PairNumber)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SubjectTitle)
+            @Html.DisplayNameFor(model => model.Subject_Techer_Id)
         </th>
         <th></th>
     </tr>
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.PairNumber)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SubjectTitle)
+            @Html.DisplayFor(modelItem => item.Subject_Techer_Id)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
