--- a/RAM0230_Project_group_1/Project.UI.WebMVCApp/Views/Shared/_Layout.cshtml
+++ b/RAM0230_Project_group_1/Project.UI.WebMVCApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Visits", "Index", "Visits")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
